Segfault when switching month during event creation on May 31st
When creating an event on May 31st gnome calendar crashes when switching to another month in the date picker.
Steps to reproduce:
- Open GNOME Calendar
- Click on May 31st
- Click on "Edit Details"
- Click on the arrow pointing down next to one of the two dates (start or end date)
- Click on the arrow pointing right to the right of the word "May" (the arrow pointing left has the same problem)
Gnome Calendar segfaults
Tested on Ubuntu 18.04 with Gnome Calendar 3.28.1
gdb output:
(gnome-calendar:27517): GLib-CRITICAL **: 20:19:22.983: g_date_time_get_ymd: assertion 'datetime != NULL' failed
(gnome-calendar:27517): GLib-CRITICAL **: 20:19:22.983: g_date_time_ref: assertion 'datetime != NULL' failed
(gnome-calendar:27517): GLib-CRITICAL **: 20:19:22.983: g_date_time_get_ymd: assertion 'datetime != NULL' failed
(gnome-calendar:27517): GLib-CRITICAL **: 20:19:22.983: g_date_time_get_ymd: assertion 'datetime != NULL' failed
(gnome-calendar:27517): GLib-CRITICAL **: 20:19:22.983: g_date_time_get_ymd: assertion 'datetime != NULL' failed
(gnome-calendar:27517): GLib-CRITICAL **: 20:19:22.983: g_date_time_unref: assertion 'datetime != NULL' failed
(gnome-calendar:27517): GLib-CRITICAL **: 20:19:22.983: g_date_time_ref: assertion 'datetime != NULL' failed
(gnome-calendar:27517): GLib-CRITICAL **: 20:19:22.985: g_date_time_get_ymd: assertion 'datetime != NULL' failed
Thread 1 "gnome-calendar" received signal SIGSEGV, Segmentation fault.
0x000055555558e948 in ?? ()