date-chooser: Ensure selected day is contained in new month

When navigating through the dates of GcalDateChooser, if we
select a day (e.g. 31) that is not contained inside the next
or previous month, Calendar crashes.

Fix that by ensuring that the selected day is always contained
in the new month.

https://gitlab.gnome.org/GNOME/gnome-calendar/issues/284